website/i18n/zh-CN/docusaurus-plugin-content-docs/version-2.x/guides/markdown-features/markdown-features-diagrams.mdx
---
id: diagrams
title: Diagrams
description: Writing diagrams with Mermaid
slug: /markdown-features/diagrams
---

# 图表绘制

可通过[Mermaid](https://mermaid-js.github.io/mermaid/)代码块渲染图表。

## 安装 {#installation}

```bash npm2yarn
npm install --save @docusaurus/theme-mermaid
```

在`docusaurus.config.js`中添加插件`@docusaurus/theme-mermaid`并将`markdown.mermaid`设为`true`以启用Mermaid功能。

```js title="docusaurus.config.js"
module.exports = {
  markdown: {
    mermaid: true,
  },
  themes: ['@docusaurus/theme-mermaid'],
};
```

## 使用方式 {#usage}

添加语言标记为`mermaid`的代码块：

````md title="Example Mermaid diagram"
```mermaid
graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
```
````

```mermaid
graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
```

更多Mermaid语法请参阅[Mermaid语法文档](https://mermaid-js.github.io/mermaid/#/./n00b-syntaxReference)。

## 主题配置 {#theming}

可通过`docusaurus.config.js`中`themeConfig`下的`mermaid.theme`值分别设置浅色/深色模式下的图表主题。

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    mermaid: {
      theme: {light: 'neutral', dark: 'forest'},
    },
  },
};
```

更多主题配置请参阅[Mermaid主题文档](https://mermaid-js.github.io/mermaid/#/theming)。

## Mermaid配置 {#configuration}

`mermaid.options`中的配置项将直接传递给`mermaid.initialize`：

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    mermaid: {
      options: {
        maxTextSize: 50,
      },
    },
  },
};
```

可用配置选项请参阅[Mermaid配置文档](https://mermaid-js.github.io/mermaid/#/./Setup?id=configuration)。