website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/guides/markdown-features/markdown-features-diagrams.mdx
---
id: diagrams
title: Diagrams
description: Writing diagrams with Mermaid
slug: /markdown-features/diagrams
---

# 图表绘制

可通过[Mermaid](https://mermaid-js.github.io/mermaid/)代码块来渲染图表。

## 安装指南 {#installation}

```bash npm2yarn
npm install --save @docusaurus/theme-mermaid
```

在`docusaurus.config.js`中添加插件`@docusaurus/theme-mermaid`并将`markdown.mermaid`设为`true`以启用Mermaid功能。

```js title="docusaurus.config.js"
export default {
  markdown: {
    mermaid: true,
  },
  themes: ['@docusaurus/theme-mermaid'],
};
```

## 使用方法 {#usage}

添加语言标记为`mermaid`的代码块：

````md title="Example Mermaid diagram"
```mermaid
graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
```
````

```mermaid
graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
```

更多Mermaid语法请参阅[Mermaid语法文档](https://mermaid-js.github.io/mermaid/#/./n00b-syntaxReference)。

## 主题定制 {#theming}

可通过在`docusaurus.config.js`的`themeConfig`中设置`mermaid.theme`值来更改图表的深色/浅色主题，支持分别配置两种模式。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    mermaid: {
      theme: {light: 'neutral', dark: 'forest'},
    },
  },
};
```

更多主题配置请参阅[Mermaid主题文档](https://mermaid-js.github.io/mermaid/#/theming)。

## Mermaid配置 {#configuration}

`mermaid.options`中的配置项将直接传递给`mermaid.initialize`：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    mermaid: {
      options: {
        maxTextSize: 50,
      },
    },
  },
};
```

可用配置选项请参阅[Mermaid配置文档](https://mermaid-js.github.io/mermaid/#/./Setup?id=configuration)及[Mermaid配置类型定义](https://github.com/mermaid-js/mermaid/blob/master/packages/mermaid/src/config.type.ts)。